// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > review > checkAccessRequestsApproved > approved access request exists 1`] = `
[
  [
    {
      "accessRequestId": [
        "access-1",
        "access-2",
      ],
      "responses": {
        "$elemMatch": {
          "decision": "approve",
        },
      },
    },
  ],
]
`;

exports[`services > review > checkAccessRequestsApproved > no approved access requests with a required role 1`] = `
[
  [
    {
      "accessRequestId": [
        "access-1",
        "access-2",
      ],
      "responses": {
        "$elemMatch": {
          "decision": "approve",
        },
      },
    },
  ],
]
`;

exports[`services > review > findReviews > active 1`] = `
[
  {},
]
`;

exports[`services > review > findReviews > active 2`] = `
[
  {
    "$expr": {
      "$gt": [
        {
          "$size": {
            "$filter": {
              "as": "item",
              "cond": {
                "$and": [
                  {
                    "$in": [
                      "$$item.entity",
                      [
                        "user:test",
                      ],
                    ],
                  },
                  {
                    "$in": [
                      "$role",
                      "$$item.roles",
                    ],
                  },
                ],
              },
              "input": "$model.collaborators",
            },
          },
        },
        0,
      ],
    },
  },
]
`;

exports[`services > review > findReviews > active reviews for a specific model 1`] = `
[
  {
    "modelId": "modelId",
  },
]
`;

exports[`services > review > findReviews > active reviews for a specific model 2`] = `
[
  {
    "$expr": {
      "$gt": [
        {
          "$size": {
            "$filter": {
              "as": "item",
              "cond": {
                "$and": [
                  {
                    "$in": [
                      "$$item.entity",
                      [
                        "user:test",
                      ],
                    ],
                  },
                  {
                    "$in": [
                      "$role",
                      "$$item.roles",
                    ],
                  },
                ],
              },
              "input": "$model.collaborators",
            },
          },
        },
        0,
      ],
    },
  },
]
`;

exports[`services > review > respondToReview > access request successful 1`] = `
[
  {
    "accessRequestId": "accessRequestId",
    "modelId": "modelId",
    "role": "msro",
  },
]
`;

exports[`services > review > respondToReview > access request successful 2`] = `
[
  {
    "$expr": {
      "$gt": [
        {
          "$size": {
            "$filter": {
              "as": "item",
              "cond": {
                "$and": [
                  {
                    "$in": [
                      "$$item.entity",
                      [
                        "user:test",
                      ],
                    ],
                  },
                  {
                    "$in": [
                      "$role",
                      "$$item.roles",
                    ],
                  },
                ],
              },
              "input": "$model.collaborators",
            },
          },
        },
        0,
      ],
    },
  },
]
`;

exports[`services > review > respondToReview > release successful 1`] = `
[
  {
    "modelId": "modelId",
    "role": "msro",
    "semver": "semver",
  },
]
`;

exports[`services > review > respondToReview > release successful 2`] = `
[
  {
    "$expr": {
      "$gt": [
        {
          "$size": {
            "$filter": {
              "as": "item",
              "cond": {
                "$and": [
                  {
                    "$in": [
                      "$$item.entity",
                      [
                        "user:test",
                      ],
                    ],
                  },
                  {
                    "$in": [
                      "$role",
                      "$$item.roles",
                    ],
                  },
                ],
              },
              "input": "$model.collaborators",
            },
          },
        },
        0,
      ],
    },
  },
]
`;

exports[`services > review > respondToReview > successful 1`] = `
[
  {
    "modelId": "modelId",
    "role": "msro",
    "semver": "semver",
  },
]
`;

exports[`services > review > respondToReview > successful 2`] = `
[
  {
    "$expr": {
      "$gt": [
        {
          "$size": {
            "$filter": {
              "as": "item",
              "cond": {
                "$and": [
                  {
                    "$in": [
                      "$$item.entity",
                      [
                        "user:test",
                      ],
                    ],
                  },
                  {
                    "$in": [
                      "$role",
                      "$$item.roles",
                    ],
                  },
                ],
              },
              "input": "$model.collaborators",
            },
          },
        },
        0,
      ],
    },
  },
]
`;
